--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ _working/ENHANCED/PATCH 811 - Mar 25/update.rpf common data levels gta5/vehicles
 _working/ENHANCED/PATCH 811 - Mar 25/update2 x64 data lang/differences.txt
 _working/ENHANCED/PATCH 811 - Mar 25/update2 x64 data lang/global.oxt
 _working/ENHANCED/PATCH 811 - Mar 25/Vanilla/global.oxt
+_RELEASES/_ENHANCED/PATCH 811 - Mar 25/update2.rpf
+_RELEASES/_ENHANCED/PATCH 811 - Mar 25/readme.md
