--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ _working/ENHANCED/PATCH 811 - Mar 25/update2 x64 data lang/global.oxt
 _working/ENHANCED/PATCH 811 - Mar 25/Vanilla/global.oxt
 _RELEASES/_ENHANCED/PATCH 811 - Mar 25/update2.rpf
 _RELEASES/_ENHANCED/PATCH 811 - Mar 25/readme.md
+python script/_Output/differences.txt
+python script/_Output/global.oxt
+python script/_Output/global.oxt.bak1
+python script/_Output/global.oxt.bak2
+python script/_Output/global.oxt.bak3
+python script/_Output/global.oxt.bak4
+python script/_Output/global.oxt.bak5
+python script/Vanilla/global.oxt
