--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,52 @@ python script/_Output/global.oxt.bak3
 python script/_Output/global.oxt.bak4
 python script/_Output/global.oxt.bak5
 python script/Vanilla/global.oxt
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/common data levels gta5/manual changes.txt
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/common data levels gta5/RDE 4/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/common data levels gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/common data levels gta5/vehicles.meta.bak
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/_mp2024_02/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/_mpsecurity/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/_mpsum/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mp2023_01/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mp2023_02/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mp2024_01/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpapartment/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpassault/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpbattle/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpbeach/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpbiker/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpbusiness/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpchristmas2017/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpchristmas2018/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpchristmas3/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpexecutive/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpgunrunning/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpheist/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpheist3/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpheist4/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mphipster/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpimportexport/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mplowrider/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpluxe/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpluxe2/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mppilot/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpsmuggler/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpstunt/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpsum2/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mptuner/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/mpvinewood/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update.rpf/dlc_patch/spupgrade/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/_update2.rpf x64 data lang/global.oxt
+_working/ENHANCED/PATCH 1013 - Dec 25/readme.md
+_working/ENHANCED/PATCH 1013 - Dec 25/Vanilla/global.oxt
+_working/ENHANCED/PATCH 1013 - Dec 25/Vanilla/mp2025_02/global.oxt
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_Global/content.xml
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_Global/data/dlctext.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_Global/setup2.xml
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_Global/x64/data/lang/global.oxt
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_RenameV/common/data/dlctext.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_RenameV/common/data/levels/gta5/vehicles.meta
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_RenameV/content.xml
+_working/ENHANCED/PATCH 1013 - Dec 25/x64/dlcpacks/A_RenameV/setup2.xml
+_working/ENHANCED/PATCH 811-812.8 - Mar 25/_update.rpf/common data levels gta5/vehicles.meta.bak
